--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gerenciadordefav",
   "version": "0.1.0",
-  "homepage": "https://nadsuus.github.io/gerenciadordefav",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "router-dom": "^2.2.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
